[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/snails/SnailPathFollow2D.gd" type="Script" id=1]
[ext_resource path="res://images/snails/snail_2.png" type="Texture" id=2]
[ext_resource path="res://images/snails/snail_3.png" type="Texture" id=3]
[ext_resource path="res://images/snails/snail_1.png" type="Texture" id=4]
[ext_resource path="res://images/snails/snail_stop.png" type="Texture" id=5]
[ext_resource path="res://scenes/snails/SnailDead.tscn" type="PackedScene" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "stop",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "move",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 17, 17 )

[node name="SnailPathFollow2D" type="PathFollow2D"]
script = ExtResource( 1 )
SnailDead = ExtResource( 6 )

[node name="SnailSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "stop"
playing = true

[node name="Snail" type="KinematicBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Snail"]
shape = SubResource( 2 )

[node name="Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
shape = SubResource( 3 )
[connection signal="area_entered" from="Detector" to="." method="_on_Detector_area_entered"]
[connection signal="body_entered" from="Detector" to="." method="_on_Detector_body_entered"]
